--- a/kubernetes_service.yml.template
+++ b/kubernetes_service.yml.template
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: get-ip
+  namespace: ${NAMESPACE}
   labels:
     app: get-ip
     commit: ${WERCKER_GIT_COMMIT}
