--- a/wercker.yml
+++ b/wercker.yml
@@ -42,6 +42,15 @@ deploy-to-kubernetes:
 
     # `apply` is a good command to use here, as it'll create Kubernetes entities if they are missing.
     - kubectl:
+        name: create a namepace to kubernetes
+        server: $OKE_MASTER
+        token: $OKE_TOKEN
+        insecure-skip-tls-verify: true
+        command: create ns ${NAMESPACE} 
+        
+        
+    # `apply` is a good command to use here, as it'll create Kubernetes entities if they are missing.
+    - kubectl:
         name: deploy to kubernetes
         server: $OKE_MASTER
         token: $OKE_TOKEN
